Lagt til bloggside og artikkel

--- a/src/pages/case.astro
+++ b/src/pages/case.astro
@@ -38,7 +38,7 @@ const cases = [
       'Conversion-optimalisert',
     ],
     results: [
-      '7 befaringer på 30 dager',
+      '+41% flere befaringer',
       '-45% bounce rate',
       '+60% flere leads',
     ],
