--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -49,6 +49,7 @@ function getMobileNavLinkClasses(path: string): string {
             >Pakker & Priser</a
           >
           <a href="/case" class={getNavLinkClasses('/case')}>Prosjekter</a>
+          <a href="/blog" class={getNavLinkClasses('/blog')}>Blogg</a>
           <a
             href="/kontakt"
             class="bg-blue-600 text-white hover:bg-blue-700 px-4 py-2 rounded-md text-sm font-medium transition-colors duration-200"
@@ -109,6 +110,7 @@ function getMobileNavLinkClasses(path: string): string {
         >Pakker & Priser</a
       >
       <a href="/case" class={getMobileNavLinkClasses('/case')}>Prosjekter</a>
+      <a href="/blog" class={getMobileNavLinkClasses('/blog')}>Blogg</a>
       <a
         href="/kontakt"
         class="bg-blue-600 text-white hover:bg-blue-700 block px-3 py-2 rounded-md text-base font-medium"
